# example-axum-api

./: .gitignore  Cargo.toml  Readme.md  log4rs.yaml
docs/: http.md  websocket.md
migrations/: 20251114143622_user.up.sql  20251123040958_group.up.sql  20251123123104_update_user.down.sql  20251123123104_update_user.up.sql
src/: app_state.rs  main.rs  routes.rs
src/auth/: extractors.rs  handler.rs  jwt.rs  middleware.rs  mod.rs  user.rs  util.rs
src/config/: connection.rs  flavor.rs  logger.rs  mod.rs
src/group/: handler.rs
src/websocket/: chat.rs  group.rs  handler.rs  mod.rs
