[package]
name = "example-axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = "0.12.1"
axum-test = "18.2.1"
chrono = "0.4.42"
config = "0.15.18"
futures = "0.3.31"
http = "1.3.1"
log = "0.4.28"
log4rs = "1.4.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
